[workspace]

resolver = "2"

members= [
  "core",
  "lib",
  "storage",
  "zome",
]

[workspace.dependencies]
hdi = "0.4.1"
hdk = "0.3.1"
serde = "=1.0.197"
holo_hash = "=0.3.0-beta-dev.25"
holochain_serialized_bytes = "=0.0.53"
holochain_zome_types = { version = "=0.3.1", default-features = false }